--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.1",
+        "axios": "^1.6.2",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.5.2",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.3.1"
     }
 }
