--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.5.2",
+        "@vueform/multiselect": "^2.6.6",
         "vue": "^3.2.36",
-        "vue-loader": "^17.3.1"
+        "vue-loader": "^17.3.1",
+        "vue3-select2-component": "^0.1.7"
     }
 }
