--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "jquery": "^3.7.1",
         "vue": "^3.2.36",
         "vue-loader": "^17.3.1",
-        "vue3-select2-component": "^0.1.7"
+        "vue3-select2-component": "^0.1.7",
+        "vue3-toastify": "^0.2.1"
     }
 }
