--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.1",
+        "axios": "^1.6.2",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.5.2",
+        "@vueform/multiselect": "^2.6.6",
+        "jquery": "^3.7.1",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.3.1",
+        "vue3-select2-component": "^0.1.7"
     }
 }
